basic front end integration

--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,11 @@ threadsafe: true
 
 # [START handlers]
 handlers:
+- url: /css
+  static_dir: css
+- url: /js
+  static_dir: js
+
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
