--- a/app.yaml
+++ b/app.yaml
@@ -16,10 +16,10 @@ handlers:
 - url: /bootstrap
   static_dir: bootstrap
 
-'''
-- url: /.*
-  script: hoop_picks.app
-'''
+
+#- url: /.*
+#  script: hoop_picks.app
+
 
 - url: /cron/.*
   script: hoop_picks.app
