cron/update... app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -17,8 +17,8 @@ handlers:
   static_dir: bootstrap
 
 
-#- url: /.*
-#  script: hoop_picks.app
+- url: /.*
+  script: hoop_picks.app
 
 
 - url: /cron/.*
