Add cron job for updating goat index

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,9 @@
 cron:
 - description: update yesterday's NBA games
   url: /cron/update_nba_games/
-  schedule: every day 00:15
+  schedule: every day 00:00
+  timezone: America/Los_Angeles
+- description: update goat index
+  url: /cron/recalculate_goat_index/
+  schedule: every day 00:05
   timezone: America/Los_Angeles
