--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,8 @@ handlers:
   static_dir: css
 - url: /js
   static_dir: js
+- url: /img
+  static_dir: img
 
 - url: /favicon\.ico
   static_files: favicon.ico
