--- a/app.yaml
+++ b/app.yaml
@@ -13,9 +13,9 @@ handlers:
 - url: /src
   static_dir: src
 
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+- url: /goatfavicon\.ico
+  static_files: goatfavicon.ico
+  upload: goatfavicon\.ico
 
 - url: /bootstrap
   static_dir: bootstrap
